--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">-->
     <title>Course Graph</title>
 </head>
 <body>
-<div id="example"></div>
+<div id="root"></div>
 
 <!-- Dependencies -->
 <script src="./node_modules/react/umd/react.development.js"></script>
