--- a/index.html
+++ b/index.html
@@ -1,19 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">-->
-    <title>Course Graph</title>
-</head>
 <body>
 <div id="root"></div>
-
-<!-- Dependencies -->
-<script src="./node_modules/react/umd/react.development.js"></script>
-<script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
-
-<!-- Main -->
-<script src="./dist/bundle.js"></script>
+<!-- scripts -->
+<script src="./dist/app-bundle.js"></script>
 </body>
-</html>
